fixed map z-index

--- a/css/main.css
+++ b/css/main.css
@@ -120,7 +120,7 @@ small {
     top: 0;
     height: max-content;
     width: 100%;
-    z-index: 1000;
+    z-index: 10000;
 }
 
 .nenamute {
